<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="view" translatable="false" />
    <string name="post_remove">Remove</string>
    <string name="content_hint">Content</string>
    <string name="post_edit">Post Text</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="error_empty_content" translatable="false">Empty content</string>
    <string name="close_edit" translatable="false">closeEdit</string>
    <string name="edit_message" translatable="false">edit_message</string>
    <string name="cancel_edit_operation" translatable="false">cancel_edit_operation</string>
    <string name="edit">Edit</string>
    <string name="play">Play</string>
	<string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s, published new post: %2$s\</string>
</resources>